# HOPI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: BuildDefaults.cmake  DefineTextColor.cmake  InternalUtils.cmake  ThirdParty_Catch2.cmake
test/scratch/: rbf_interp.py
test/system/: CMakeLists.txt  system.cpp
